Исправил все в мастере, сделал ветку с задачей и скопировал туда изменения, из задачи убрал ненужные файлы предыдущих задач