@@ -1,6 +1,6 @@
 package school.faang.collcetUsers;
 
-import java.util.ArrayList;
+
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
@@ -9,18 +9,25 @@ import java.util.Set;
 
 public class Main {
     public static void main(String[] args) {
-        User user1 = new User(1, "Alice", 30, new HashSet<>(Arrays.asList("Reading", "Swimming")));
-        User user2 = new User(2, "Bob", 25, new HashSet<>(Arrays.asList("Running", "Cycling")));
-        User user3 = new User(3, "Charlie", 28, new HashSet<>(Arrays.asList("Swimming", "Cooking")));
+        // Создаем пользователей
+        User user1 = new User(1, "Alice", 25, Arrays.asList("reading", "swimming"), "Google", "London");
+        User user2 = new User(2, "Bob", 30, Arrays.asList("cycling", "reading"), "Uber", "New York");
+        User user3 = new User(3, "Charlie", 20, Arrays.asList("running", "swimming"), "Amazone", "Amsterdam");
 
-        List<User> users = List.of(user1, user2, user3);
-        Set<String> hobbies = new HashSet<>(Arrays.asList("Swimming", "Dancing"));
+        List<User> users = Arrays.asList(user1, user2, user3);
 
+        // Определяем хобби
+        Set<String> hobbies = new HashSet<>(Arrays.asList("reading", "swimming"));
+
+        // Находим пользователей с хобби
         Map<User, String> hobbyLovers = User.findHobbyLovers(users, hobbies);
 
-        // Вывод результата
-        for (Map.Entry<User, String> entry : hobbyLovers.entrySet()) {
-            System.out.println(entry.getKey().getName() + " "+ entry.getValue());
+        // Выводим пользователей с их хобби
+        hobbyLovers.forEach((user, message) -> System.out.println(message));
+
+        // Печатаем информацию о пользователях
+        for (User user : users) {
+            System.out.println(user);
         }
     }
 }
